samples/_failures_safe/1761429480_b4aa69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b438a991.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_b438a991.c:156:9: error: expected declaration or statement at end of input
  156 |         }
      |         ^
./samples/SAFE/__tmp_b438a991.c:156:9: error: expected declaration or statement at end of input
